--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm-run-all build:*; gulp",
     "build:js": "browserify src/js/main.js -o dist/built.js",
-    "build:css": "sass src/sass/main.scss dist/built.css"
+    "build:css": "sass src/sass/main.scss dist/built.css",
+    "clean": "rm -rf dist/*"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.11",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4"
   }
 }
