--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "main": "rubiks_cube.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:*; gulp",
-    "build:js": "browserify src/js/main.js -o dist/built.js",
-    "build:css": "sass src/sass/main.scss dist/built.css",
     "clean": "rm -rf dist/*"
   },
   "repository": {
@@ -21,9 +18,14 @@
   },
   "homepage": "https://github.com/scott-mck/rubiks_cube#readme",
   "dependencies": {
+    "browserify": "^13.1.0",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^2.0.11",
+    "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "gulp-watch": "^4.3.9",
+    "vinyl-transform": "^1.0.0"
   }
 }
