--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
   },
   "homepage": "https://github.com/scott-mck/rubiks_cube#readme",
   "dependencies": {
-    "browserify": "^13.1.0",
+    "jquery": "^3.1.0",
+    "shrinkwrap": "^0.4.0",
+    "three": "^0.79.0"
+  },
+  "devDependencies": {
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
-    "gulp-clean-css": "^2.0.11",
+    "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.9",
-    "vinyl-transform": "^1.0.0"
+    "npm-run-all": "^2.3.0"
   }
 }
