--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "three": "^0.79.0"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.9",
-    "npm-run-all": "^2.3.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
