--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/scott-mck/rubiks_cube#readme",
   "dependencies": {
+    "gsap": "^1.19.0",
     "jquery": "^3.1.0",
-    "shrinkwrap": "^0.4.0",
     "three": "^0.79.0"
   },
   "devDependencies": {
