CommonJS for modules

--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.9",
     "node-sass": "^3.10.0",
+    "npm-run-all": "^3.1.0",
     "onchange": "^3.0.2",
     "rollup": "^0.36.0",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.4",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "uglify-js": "^2.7.3",
     "vinyl-buffer": "^1.0.0",
