--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "clean": "rm -rf dist/*",
     "css": "node-sass src/scss/main.scss dist/built.css",
     "css:ugly": "node-sass src/scss/main.scss dist/built.css --output-style=compressed",
-    "css:watch": "npm run css && onchange 'src/scss/**/*.scss' -- npm run css",
-    "js": "rollup -c",
+    "css:watch": "onchange -i 'src/scss/**/*.scss' -- npm run css",
+    "js": "babel-node scripts/js-start.js && rollup -c && babel-node scripts/js-end.js",
     "js:ugly": "rollup -c && uglifyjs dist/built.js -mc -o dist/built.js",
-    "js:watch": "npm run js && onchange 'src/js/**/*.js' -- npm run js"
+    "js:watch": "onchange -i 'src/js/**/*.js' -- npm run js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "babel-preset-es2015-rollup": "^1.2.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "chalk": "^1.1.3",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -48,6 +49,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.9",
+    "node-babel": "^0.1.2",
     "node-sass": "^3.10.0",
     "npm-run-all": "^3.1.0",
     "onchange": "^3.0.2",
