--- a/package.json
+++ b/package.json
@@ -38,18 +38,6 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rollup": "^2.5.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-uglify": "^1.5.4",
-    "gulp-watch": "^4.3.9",
     "node-babel": "^0.1.2",
     "node-sass": "^3.10.0",
     "npm-run-all": "^3.1.0",
@@ -59,8 +47,6 @@
     "rollup-plugin-commonjs": "^5.0.4",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
-    "uglify-js": "^2.7.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "uglify-js": "^2.7.3"
   }
 }
