--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "css": "node-sass src/scss/main.scss dist/built.css",
     "css:ugly": "npm run css -- --output-style=compressed",
     "css:watch": "onchange -i 'src/scss/**/*.scss' -- npm run css",
-    "js": "rollup -c",
+    "js": "rollup -c -f iife -o dist/built.js",
     "js:ugly": "npm run js && uglifyjs dist/built.js -mc -o dist/built.js",
-    "js:watch": "rollup -c --watch",
+    "js:watch": "npm run js -- --watch",
     "prejs": "babel-node scripts/js-start.js",
     "postjs": "babel-node scripts/js-end.js",
     "watch": "npm-run-all -p css:watch js:watch"
@@ -38,7 +38,6 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
-    "node-babel": "^0.1.2",
     "node-sass": "^3.10.0",
     "npm-run-all": "^3.1.0",
     "onchange": "^3.0.2",
