--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["es2015-rollup"]
+  "presets": ["es2015-rollup", "babel-polyfill", "stage-2"],
+  "plugins": ["transform-runtime"]
 }
