--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-stage-2": "^6.17.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
