--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015-rollup", "babel-polyfill", "stage-2"],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime", "external-helpers"]
 }
