--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "gsap": "^1.19.0",
     "jquery": "^3.1.0",
-    "three": "^0.79.0"
+    "three": "^0.79.0",
+    "to-array": "^0.1.4"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
