--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-stage-2": "^6.17.0",
+    "babel-runtime": "^6.20.0",
     "node-sass": "^3.10.0",
     "npm-run-all": "^3.1.0",
     "onchange": "^3.0.2",
