--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "A Rubik's Cube Browser Simulator",
   "main": "rubiks_cube.js",
   "scripts": {
-    "build": "npm-run-all clean css:ugly js:ugly",
+    "build": "webpack && npm run css:ugly && npm run uglifyjs",
     "clean": "rm -rf dist/*",
     "css": "node-sass src/scss/main.scss dist/built.css",
     "css:ugly": "npm run css -- --output-style=compressed",
     "css:watch": "onchange -i 'src/scss/**/*.scss' -- npm run css",
-    "deploy": "git checkout gh-pages && git merge master && npm run build && git add -A && git commit -m \"Deploy\" && git push && git checkout master",
-    "js": "rollup -c",
-    "js:ugly": "npm run js && uglifyjs dist/built.js -mc -o dist/built.js",
-    "js:watch": "npm run js -- --watch --serve",
-    "watch": "npm-run-all -p css:watch js:watch"
+    "dev": "webpack-dev-server & npm run css:watch",
+    "uglifyjs": "uglifyjs dist/built.js -mc -o dist/built.js"
   },
   "repository": {
     "type": "git",
@@ -32,12 +29,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
-    "babel-preset-stage-2": "^6.17.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-regenerator-runtime": "^6.5.0",
     "babel-runtime": "^6.20.0",
     "node-sass": "^3.10.0",
     "npm-run-all": "^3.1.0",
@@ -50,6 +49,8 @@
     "rollup-plugin-serve": "^0.1.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0",
-    "uglify-js": "^2.7.3"
+    "uglify-js": "^2.7.3",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   }
 }
